--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,79 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Urbanist&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Urbanist&display=swap");
 
 body {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  background-color: #161616;
+  animation: fadeIn 600ms forwards;
 }
 
-h1,h2,h3,h4,h5 {
-    font-weight: bold !important;
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: bold !important;
 }
 
 h1 {
-    font-size: 45px;
-    margin: 10px 0px;
+  font-size: 45px;
+  margin: 10px 0px;
 }
 
 p {
-    font-size: 20px;
-    margin: 5px 0px;
+  font-size: 20px;
+  margin: 5px 0px;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .word-scrapper-wrapper {
-    color: white;
-    background-color: #161616;
-    font-family: 'Urbanist', sans-serif;
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    z-index: 0;
-
+  color: white;
+  background-color: #161616;
+  font-family: "Urbanist", sans-serif;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 0;
 }
 
 .word-scrapper-background {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    height: 100vh;
-    width: 100vw;
-    z-index: 10;
-    background: rgba(0, 0, 0, 0.479);
-}
-
-.word-scrapper-container {
-    height: fit-content;
-    height: -moz-fit-content;
-    max-width: 1200px;
-    margin-top: 20vh;
-    padding: 15px;
-    position: relative;
-    z-index: 100;
-}
-
-.word-scrapper-head {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.word-scrapper-body {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.479);
 }
