--- a/ui/src/pages/Search/SearchStyle.css
+++ b/ui/src/pages/Search/SearchStyle.css
@@ -10,8 +10,10 @@
 
 .word-scrapper-searchPage-head {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: left;
   margin: 45px;
   animation: headPartAnim 500ms forwards;
 }
