--- a/ui/src/components/WSSearch/WSSearchStyle.css
+++ b/ui/src/components/WSSearch/WSSearchStyle.css
@@ -1,8 +1,8 @@
 .word-scrapper-input-container {
-  background-color: #3a3939;
+  background-color: #1b1b1b;
   border-radius: 30px;
   border: none;
-  width: 90%;
+  width: 100%;
   height: 30px;
   padding: 12px;
   outline: none;
@@ -12,6 +12,7 @@
   display: flex;
   border: 3px solid transparent;
   position: relative;
+  max-width: 1300px;
 }
 
 .word-scrapper-input-container input {
