--- a/ui/src/components/WSResults/WSResultsStyle.css
+++ b/ui/src/components/WSResults/WSResultsStyle.css
@@ -23,6 +23,7 @@
   justify-content: center;
   margin: 80px 0px;
   margin-bottom: 20px;
+  animation: resultsInitAnim 1200ms forwards;
 }
 
 .word-scrapper-results-table-container {
@@ -35,7 +36,6 @@
   overflow: hidden;
   border-radius: 5px;
   max-width: 1300px;
-  animation: resultsInitAnim 1200ms forwards;
 }
 
 .word-scrapper-results-head {
@@ -99,6 +99,20 @@
 .spinner .bounce2 {
   -webkit-animation-delay: -0.16s;
   animation-delay: -0.16s;
+}
+
+.word-scrapper-results-notFound h1 {
+  margin: 3px;
+}
+
+.word-scrapper-results-notFound {
+  background-color: #c54141;
+  color: white;
+  text-align: left;
+  padding: 10px;
+  width: 90%;
+  border-radius: 5px;
+  max-width: 1300px;
 }
 
 @-webkit-keyframes sk-bouncedelay {
