Re created some ui parts

--- a/ui/src/pages/Main/MainStyle.css
+++ b/ui/src/pages/Main/MainStyle.css
@@ -31,3 +31,13 @@
     text-align: center;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .word-scrapper-mainPage-head h1 {
+    font-size: 42px;
+  }
+
+  .word-scrapper-mainPage-head p {
+    font-size: 18px;
+  }
+}
