--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -71,3 +71,21 @@ p {
   z-index: 10;
   background: rgba(0, 0, 0, 0.479);
 }
+
+.word-scrapper-betaBadge {
+  padding: 3px;
+  margin: 8px auto;
+  background-color: #4b5dc1;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  border-radius: 3px;
+  width: fit-content;
+}
+
+@media only screen and (max-width: 500px) {
+  .word-scrapper-betaBadge {
+    margin: 6px auto;
+    font-size: 16px;
+  }
+}
