--- a/ui/src/components/WSSearch/WSSearchStyle.css
+++ b/ui/src/components/WSSearch/WSSearchStyle.css
@@ -51,3 +51,11 @@
 .word-scrapper-input-container:focus {
   border-color: #3a4791;
 }
+
+@media only screen and (max-width: 500px) {
+  .word-scrapper-searchPage-head .word-scrapper-input-container {
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 80% !important;
+  }
+}
