--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Urbanist&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
   height: 100vh;
+  position: fixed;
+  left: 0px;
+  top: 0px;
   width: 100vw;
+  overflow-y: scroll;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   background-color: #161616;
@@ -43,6 +48,7 @@ p {
   font-family: "Urbanist", sans-serif;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   display: flex;
@@ -51,8 +57,6 @@ p {
   display: flex;
   justify-content: center;
   box-sizing: border-box;
-  overflow-x: hidden;
-  overflow-y: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
