--- a/ui/src/components/WSResults/WSResultsStyle.css
+++ b/ui/src/components/WSResults/WSResultsStyle.css
@@ -14,6 +14,10 @@
   }
 }
 
+.word-scrapper-results-table p:last-child {
+  border: none !important;
+}
+
 .word-scrapper-results-container {
   width: 100%;
   height: fit-content;
@@ -33,7 +37,6 @@
   background-color: #1b1b1b;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
   border-radius: 5px;
   max-width: 1300px;
 }
@@ -46,8 +49,8 @@
   border-bottom: 1px solid #727272;
 }
 
-.word-scrapper-results-head p {
-  margin-top: 0px;
+.word-scrapper-results-head > h1 {
+  text-transform: uppercase;
 }
 
 .word-scrapper-results-table {
@@ -65,11 +68,13 @@
   padding: 5px;
   font-size: 30px;
   font-weight: bold;
+  background-color: #212325;
 }
 
 .word-scrapper-results-table p {
   margin: 3px;
   padding: 5px;
+  color: #d4d3d3;
 }
 
 /* Spinner Stylings */
