--- a/ui/src/pages/Search/SearchStyle.css
+++ b/ui/src/pages/Search/SearchStyle.css
@@ -1,5 +1,7 @@
 .word-scrapper-searchPage-container {
   width: 100%;
+  height: fit-content;
+  height: -moz-fit-content;
   position: relative;
   z-index: 100;
 }
