--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -22,6 +22,19 @@ p {
   margin: 5px 0px;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4b5dc1;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3c4888;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
