--- a/ui/src/components/WSResults/WSResultsStyle.css
+++ b/ui/src/components/WSResults/WSResultsStyle.css
@@ -88,12 +88,12 @@
 
 .word-scrapper-results-table-head a {
   text-decoration: none;
-  color: #4b5dc1;
+  color: #6600ff;
   transition: all 450ms ease;
 }
 
 .word-scrapper-results-table-head a:hover {
-  color: #3f4d9b;
+  color: #5705d1;
 }
 
 .word-scrapper-results-table p {
@@ -122,7 +122,7 @@
 }
 
 .word-scrapper-results-table-collapse-btn:hover {
-  background-color: #4b5dc1a9;
+  background-color: #6600ffb7;
 }
 
 .word-scrapper-results-table-collapse-btn-icon {
