Updated meta tags

--- a/ui/src/components/WSResults/WSResultsStyle.css
+++ b/ui/src/components/WSResults/WSResultsStyle.css
@@ -170,7 +170,7 @@
   width: 24px;
   height: 24px;
   margin: 0px 5px;
-  background-color: #4b5dc1;
+  background-color: #6600ff;
 
   border-radius: 10px;
   display: inline-block;
