--- a/client/src/styles/search.scss
+++ b/client/src/styles/search.scss
@@ -1,11 +1,11 @@
 @keyframes searchInit {
   0% {
-    position: relative;
-    bottom: 43.5vh;
+    opacity: 0;
+    transform: translateY(-50px);
   }
   100% {
-    position: relative;
-    bottom: 30px;
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
 
@@ -25,6 +25,15 @@
   transition: all 450ms ease;
   max-width: 800px;
   margin: 10px;
+  animation: searchInit 400ms forwards;
+}
+
+.search-head-brand {
+  text-align: center;
+
+  p {
+    display: none;
+  }
 }
 
 .search-head h1,
@@ -34,11 +43,14 @@
 
 .search-head-input {
   width: 90%;
-  margin: 25px 0px;
+  margin: 15px 0px;
 }
 
 .search-body {
   width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 760px;
 }
 
